# GD_DNN

./: CMakeLists.txt  README.md
tiny_dnn/tiny_dnn/: tiny_dnn.h
tiny_dnn/tiny_dnn/util/: util.h
